@@ -1,13 +1,13 @@
 function AssemblyPlantBuilding(pos_x, pos_y)
 {
 	this._proto = AssemblyPlantBuilding;
-	this.health_max = 1500;
-	this.construction_max = 1500;
+	this.health = this._proto.health_max;
 	
 	this.producing_queue = [];
 	this.producing_start = 0;
 	
 	this.setPosition(pos_x, pos_y);
+	this.setActionTime(this._proto.build_time);
 	
 	this.run = function()
 	{
@@ -18,7 +18,7 @@ function AssemblyPlantBuilding(pos_x, pos_y)
 				break;
 				
 			case 'PRODUCING':
-				this.producing_queue[0].construction_progress += 1 / (50 * this.producing_queue[0].construction_time);
+				this.producing_queue[0].construction_progress += 1 / (RUNS_PER_SECOND * this.producing_queue[0].construction_time);
 				if (this.producing_queue[0].construction_progress > 1)
 				{
 					var cell = this.getCell(), unit = AbstractUnit.createNew(this.producing_queue[0], cell.x + 2, cell.y + 2);
@@ -50,10 +50,12 @@ function AssemblyPlantBuilding(pos_x, pos_y)
 
 AssemblyPlantBuilding.prototype = new AbstractBuilding();
 
-AssemblyPlantBuilding.box_image = 'assembly_plant_box.png';
-AssemblyPlantBuilding.res_key = 'assembly_plant.png';
+AssemblyPlantBuilding.res_key = 'assembly_plant';
 AssemblyPlantBuilding.obj_name = 'Assembly Plant';
 AssemblyPlantBuilding.cost = 2200;
+AssemblyPlantBuilding.sell_cost = 1100;
+AssemblyPlantBuilding.health_max = 1500;
+AssemblyPlantBuilding.build_time = 44;
 AssemblyPlantBuilding.energy = 100;
 AssemblyPlantBuilding.enabled = false;
 AssemblyPlantBuilding.count = 0;
@@ -66,5 +68,5 @@ AssemblyPlantBuilding.image_padding = {x: -1, y: -3};
 AssemblyPlantBuilding.require_building = [HeadquarterBuilding];
 
 AssemblyPlantBuilding.loadResources = function(){
-	game.resources.addImage(this.res_key, 'images/buildings/assembly_plant.png');
+	AbstractBuilding.loadResources(this);
 };
