@@ -1,6 +1,8 @@
 var CELL_SIZE = 24;
 var VIEWPORT_SIZE = 448;
 
+var RUNS_PER_SECOND = 50;
+
 var ACTION_STATE_NONE = 0;
 var ACTION_STATE_SELL = 1;
 var ACTION_STATE_POWER = 2;
