@@ -131,7 +131,7 @@ function MousePointer(game)
 				break;
 			
 			case ACTION_STATE_BUILD:
-				var pos = this.getCellPosition()
+				var pos = this.getCellPosition();
 				if (AbstractBuilding.canBuild(game.action_state_options.object, pos.x, pos.y, game.selected_objects[0]))
 				{
 					game.objects[game.selected_objects[0]].build(pos.x, pos.y, game.action_state_options.object);
@@ -139,6 +139,12 @@ function MousePointer(game)
 				}
 				else
 					game.resources.get('cant_build').play();
+				break;
+				
+			case ACTION_STATE_SELL:
+				var pos = this.getCellPosition();
+				if (game.level.map_cells[pos.x][pos.y].building != -1)
+					game.objects[game.level.map_cells[pos.x][pos.y].building].sell();
 				break;
 		}
 	}
